src/parser/snapshots/enderpy__parser__parser__tests__parse_import_statement-5.snap
---
source: src/parser/parser.rs
description: import a.b.c
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        Import(
            Import {
                node: Node {
                    start: 0,
                    end: 12,
                },
                names: [
                    Alias {
                        node: Node {
                            start: 7,
                            end: 12,
                        },
                        name: "a.b.c",
                        asname: None,
                    },
                ],
            },
        ),
    ],
}
