src/parser/snapshots/enderpy__parser__parser__tests__parse_import_statement-9.snap
---
source: src/parser/parser.rs
description: from a.b import c as d
---
Module {
    node: Node {
        start: 0,
        end: 22,
    },
    body: [
        ImportFrom(
            ImportFrom {
                node: Node {
                    start: 0,
                    end: 22,
                },
                module: "a.b",
                names: [
                    Alias {
                        node: Node {
                            start: 16,
                            end: 22,
                        },
                        name: "c",
                        asname: Some(
                            "d",
                        ),
                    },
                ],
                level: 0,
            },
        ),
    ],
}
