src/parser/snapshots/enderpy__parser__parser__tests__parse_set.snap
---
source: src/parser/parser.rs
description: "{a, b, c}"
---
Module {
    node: Node {
        start: 0,
        end: 9,
    },
    body: [
        ExpressionStatement(
            Set(
                Set {
                    node: Node {
                        start: 0,
                        end: 9,
                    },
                    elements: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 4,
                                    end: 5,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                id: "c",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
